<resources>
    <string name="facebook_app_id">836993843497246</string>
    <string name="fb_login_protocol_scheme">fb836993843497246</string>
    <string name="app_name">Knowledge</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="setting">Setting</string>
    <string name="app_version">App version</string>

    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">"022eb08df0a690dd698c4f34e269c769"</string>
    <string name="FACEBOOK_APP_ID" translatable="false">36993843497246</string>
    <string name="post_now">Post Now</string>
    <string name="schedule">Schedule</string>

    <string name="posts_label">Posts:</string>
    <string name="complain_sent">Complain was sent successfully</string>
    <string name="now_time_range">now</string>

    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="feed">Feed</string>
    <string name="back">Back</string>
    <string name="most_popular_last_week">Most Popular Last Week</string>
    <string name="article">Article</string>
    <string name="video">Video</string>
    <string name="publish_on">Published on  %s</string>
    <string name="save">Saved</string>
    <string name="knowlege_sologan">Knowledge Gives You Power\n Power Gives you control\nControl gives you freedom\nFreedom gives you potential\nPotential gives you endless possibilities</string>
    <string name="share_info_message"><![CDATA[Here is some information,  that might be useful I love to share with you .I hope you’ll enjoy it. \n Check out this link : %1$s]]></string>
    <string name="share_info_text"><![CDATA[Here is some information,  that might be useful I love to share with you .I hope you’ll enjoy it.\n %1$s\n Check out this link : %2$s]]></string>
    <string name="download">Download:</string>
    <string name="app_link">link_app</string>
    <string name="Notifications">Notification</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="privacy">Privacy</string>
    <string name="restart_to_update">Restart to update</string>
    <string name="transition_project_photo">project_photo</string>
    <string name="night_mode">Night Mode</string>
    <string name="rate_us">Rate Us</string>
    <string name="term_condition">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_not_now">Not now</string>
    <string name="rating_dialog_title">Are you enjoying life hacks? \n Please rate us.</string>
    <string name="readMore">Read More</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="send_feedback">Send FeedBack</string>
    <string name="channel_name" translatable="false">Knowledge</string>
    <string name="notification_channel_id">knowledge</string>
    <string name="life">Life</string>
    <string name="no_result">No results found</string>
    <string name="connection_fail">Connection Failed</string>
    <string name="please_check_your_internet">Please Check Your Internet Connection</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try Again</string>

    <string name="post">Post</string>
    <string name="admin">Admin</string>
    <string name="pick_cat">Pick Category</string>
    <string name="pick_post_type">Pick Post Type</string>
    <string name="pick_media_type">Pick Media Type</string>
    <string name="please_enter_title">Please Enter Title</string>
    <string name="please_enter_author_name">Please Enter Author Name</string>
    <string name="please_pick_cat">Please Pick Category</string>
    <string name="please_pick_post_type">Please Pick Post Type</string>
    <string name="please_pick_quote_type">Please Pick Quote Type</string>
    <string name="please_enter_content_url">Please Enter redirect Url</string>
    <string name="please_enter_image_url" > Please Enter Image Url</string>
    <string name="favorite">Favorite</string>
    <string name="sorry_nothing_found">Sorry, nothing found</string>
    <string name="confirm_to_exit_app">Please click Back Again to exit app!</string>
    <string name="daily">Daily</string>
    <string name="quote">Quote</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="share">Share</string>
    <string name="view_source">View Source</string>
    <string name="visit_source">Visit source</string>
    <string name="detailed_description">Detailed Description</string>


</resources>
