<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:background="@color/app_22222"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/rating_dialog_title"
            android:textColor="@color/lightest_gray"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/rate_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="35dp">

            <TextView
                android:id="@+id/never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/rating_dialog_never"
                android:textColor="@color/lightest_gray"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/not_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_not_now"
                android:textColor="@color/lightest_gray"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>